@@ -1,0 +1,2 @@
+*.exe
+mkhive
